--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	display: table;
 	width: 100%;
 	padding: 0;
-	background: url(../img/IMG_3576 2.jpg) top center no-repeat;
+	background: url("../img/IMG_3576 2.jpg") top center no-repeat;
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -379,7 +379,7 @@ ol.type li a:hover {
 }
 /* Testimonials Section */
 #testimonials {
-	background: #444 url(../img/IMG_4377 2.jpg) center center no-repeat fixed;
+	background: #444 url("../img/IMG_4377 2.jpg") center center no-repeat fixed;
 	background-size: cover;
 }
 #testimonials .overlay {
