--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 .intro {
 	display: table;
 	width: 100%;
+	height: 100%;
 	padding: 0;
 	background: url("../img/IMG_3576 2.jpg") center center no-repeat;
 	background-color: #e5e5e5;
