--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.form-label, .form-control, .form-select {
+  color: #FFFFFF;
+  background-color: #1B3A2B;
+}
+
 body, html {
 	font-family: 'Open Sans', sans-serif;
 	text-rendering: optimizeLegibility !important;
